--- a/public/styles.css
+++ b/public/styles.css
@@ -220,11 +220,6 @@ form h2 {
   margin-bottom: 40px;
 }
 
-.profile-container {
-  width: 50%;
-  margin: 0;
-}
-
 form {
   max-width: 540px;
   /* margin: 4rem 0 0 3rem; */
@@ -613,6 +608,35 @@ form button:hover {
 
 #comments-container #comments .comment-box .user-detail p {
   color: var(--blog-color);
+}
+
+#profile-page {
+  width: 90%;
+  margin: 2rem auto;
+  align-items: flex-start;
+  justify-content: space-evenly;
+}
+.profile-container {
+  width: 45%;
+  /* margin: 0; */
+}
+
+#profile-page .user-blog-container {
+  width: 45%;
+  height: 125vh;
+}
+
+#profile-page .user-blog-container .bhead {
+  font-size: 1.5em;
+  color: var(--form-ele);
+  font-weight: 500;
+  text-shadow: 2px 2px rgb(0, 0, 0);
+  margin-bottom: 1rem;
+}
+
+#profile-page .user-blog-container .user-blogs {
+  width: 100%;
+  height: 100vh;
 }
 
 footer {
