--- a/views/comments.ejs
+++ b/views/comments.ejs
@@ -1,28 +1,33 @@
 <%- include('partials/header'); -%>
 
 <div id="comments-container">
-    <div id="back-to-blogs">
-        <a href="/blogs" id="back-to-blogs-link" class="content_button">&lt; Back to blogs</a>
+    <div class="comment-head container-flex" >
+        <div id="back-to-blogs">
+            <a href="/blogs" id="back-to-blogs-link" class="content_button">&lt; Blogs</a>
+        
+        </div>
+        <div class="comment-head-text">
+            <h1><%= blog.title %></h1>
+        </div>
     </div>
     <div id="comments">
        <% if (comments) { %>
-        
-       
-        <% comments.forEach(comment => { %>
-            
-            <div class="comment-box">
-                <div class="user-detail">
-                    <img src="../<%= comment.profile %>" onerror="this.src='../images/animals/female-lion.svg'" alt="Profile pic"
-                        width="80px" height="80px" style="border-radius: 50%; display: block;">
-                    <div class="user-text">
-                        <h2><%= comment.username %> </h2>
-                        <p><%= comment.comment  %> </p>
+                <% comments.forEach(comment => { %>
+                    
+                    <div class="comment-box">
+                        <div class="user-detail">
+                            <img src="../<%= comment.profile %>" onerror="this.src='../images/animals/female-lion.svg'" alt="Profile pic"
+                                width="80px" height="80px" style="border-radius: 50%; display: block;">
+                            <div class="user-text">
+                                <h2><%= comment.username %> </h2>
+                                <p><%= comment.comment  %> </p>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
-        <%}); } else { %>
+                <% }); %>
+        <%} else { %>
             <h2>No comments posted yet...</h2>
-         <% }%>
+         <% } %>
           
     </div>
     <div id="post-comments">
