--- a/views/comments.ejs
+++ b/views/comments.ejs
@@ -7,7 +7,7 @@
         
         </div>
         <div class="comment-head-text">
-            <h1><%= blog.title %></h1>
+            <h1><span style="color: white;">Blog title | </span><%= blog.title %></h1>
         </div>
     </div>
     <div id="comments">
